@@ -1,4 +1,8 @@
-﻿drkns 09.06.2014 22:12:24 +0200 - build 3949
+﻿shmuel 10.06.2014 00:45:54 +0200 - build 3950
+
+1. При выгрузке плагина LuaMacro в результате exception ручная запись макросов запрещалась не сразу.
+
+drkns 09.06.2014 22:12:24 +0200 - build 3949
 
 1. Поддежка VS 14 (CTP), пока с варнингами.
 
